--- a/config/weighted_spectrum.config
+++ b/config/weighted_spectrum.config
@@ -1,23 +1,23 @@
-inputs = QCD0to15:5.52E+10
-	 QCD15to20:1.46E+09
-	 QCD20to30:6.32E+08
-         QCD30to50:1.63E+08
-	 QCD50to80:2.16E+07
-         QCD80to120:3.08E+06
-         QCD120to170:4.94E+05
-         QCD170to230:1.01E+05
-         QCD230to300:2.45E+04
-         QCD300to380:6.24E+03
-         QCD380to470:1.78E+03
-         QCD470to600:6.83E+02
-         QCD600to800:2.04E+02
-         QCD800to1000:3.51E+01
-         QCD1000to1400:1.09E+01
-         QCD1400to1800:1.06E+00
-         QCD1800to2200:1.45E-01
-         QCD2200to2600:2.38E-02
-         QCD2600to3000:4.29E-03
-         QCD3000to3500:8.44E-04
-         QCD3500toINF:1.08E-04
+inputs = $QCD0to15:5.15628e+10
+	 QCD15to20:9.49441e+08
+	 QCD20to30:4.00982e+08
+         QCD30to50:9.47025e+07
+	 QCD50to80:1.21959e+07
+         QCD80to120:1.61724e+06
+         QCD120to170:2.55987e+05
+         QCD170to230:4.8325e+04
+         QCD230to300:1.06232e+04
+         QCD300to380:2.63494e+03
+         QCD380to470:7.22099e+02
+         QCD470to600:2.40983e+02
+         QCD600to800:6.24923e+01
+         QCD800to1000:9.42062e+00
+         QCD1000to1400:2.34357e+00
+         QCD1400to1800:1.568550e-01
+         QCD1800to2200:1.3811e-02
+         QCD2200to2600:1.29608e-03
+         QCD2600to3000:1.1404e-04
+         QCD3000to3500:8.4318e-06
+         QCD3500toINF:1.8146e-07
 
 datapath = /data/Summer08/JRA/JRAt
