*** empty log message ***

--- a/config/inputs_QCD15toINF.config
+++ b/config/inputs_QCD15toINF.config
@@ -20,4 +20,4 @@ inputs = $QCD0to15:5.15628e+10
          QCD3000to3500:8.4318e-06
          QCD3500toINF:1.8146e-07
 
-datapath = /data/Summer08/JRA/JRAt
+datapath = /data/schiefer/22X/JRA/JRAt
