*** empty log message ***

--- a/config/jra_performance.config
+++ b/config/jra_performance.config
@@ -3,10 +3,51 @@ $ jet_calibration_analyzer_x: define binning in pt, eta, and phi
 $ --------------------------- for jet performance studies
 $
 
+$
+$ algorithms [format: algorithm:drmax]
+$
+algs = 	ic5calo:0.21
+	ak5calo:0.2
+	sc5calo:0.22
+	kt4calo:0.18
+	ca4calo:0.17
+	ic5calol2l3:0.21
+	ak5calol2l3:0.2
+	sc5calol2l3:0.22
+	kt4calol2l3:0.18
+	ca4calol2l3:0.17
+	ak7calo:0.27
+	sc7calo:0.29
+	kt6calo:0.25
+	ca6calo:0.24
+	ak7calol2l3:0.27
+	sc7calol2l3:0.29
+	kt6calol2l3:0.25
+	ca6calol2l3:0.24
+	ic5pf:0.1
+	ak5pf:0.1
+	sc5pf:0.12
+	kt4pf:0.1
+	ca4pf:0.09
+	ic5pfl2l3:0.1
+	ak5pfl2l3:0.1
+	sc5pfl2l3:0.12
+	kt4pfl2l3:0.1
+	ca4pfl2l3:0.09
+	ak7pf:0.14
+	sc7pf:0.17
+	kt6pf:0.15
+	ca6pf:0.14
+	ak7pfl2l3:0.14
+	sc7pfl2l3:0.17
+	kt6pfl2l3:0.15
+	ca6pfl2l3:0.14
+	ic5jpt:0.21
+
 binspt=  20 27 35 45 57 72 90 120 150 200 300 400 550 750 1000 1500 2000 2500 3000 
 
 binseta= 0.0 1.4 2.6 3.2 4.7
 
-binsphi = -3.141 -2.700 -2.100 -1.500 -0.900 -0.300 
-           0.000
-          +0.300 +0.900 +1.500 +2.100 +2.700 +3.141
+$ binsphi = -3.141 -2.700 -2.100 -1.500 -0.900 -0.300 
+$            0.000
+$           +0.300 +0.900 +1.500 +2.100 +2.700 +3.141
