Various corrections and updates to the JetAnalyzer code package used for the 2012 L2 and L3 corrections

--- a/config/jra_dr_finebinning.config
+++ b/config/jra_dr_finebinning.config
@@ -97,8 +97,10 @@ algs = 	ic5calo:0.210
 	ak5jpt:0.205
 	ak7jpt:0.205
 	ak5jptl1:0.205
+	ak5jptl1off:0.205
 	ak5jptl1l2l3:0.205
 	ak7jptl1:0.205
+	ak7jptl1off:0.205
 
 binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 	   20   23   27   30   35   40   45   57   72   90   120   150   
