Added some new cone sizes and removed some unnecessary comments

--- a/config/jra_dr_finebinning.config
+++ b/config/jra_dr_finebinning.config
@@ -101,6 +101,18 @@ algs = 	ic5calo:0.210
 	ak5jptl1l2l3:0.205
 	ak7jptl1:0.205
 	ak7jptl1off:0.205
+	ak3pf:0.150
+	ak4pf:0.200
+	ak6pf:0.300
+	ak8pf:0.400
+	ak9pf:0.450
+	ak10pf:0.500
+	ak3pfl1:0.150
+	ak4pfl1:0.200
+	ak6pfl1:0.300
+	ak8pfl1:0.400
+	ak9pfl1:0.450
+	ak10pfl1:0.500
 
 binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 	   20   23   27   30   35   40   45   57   72   90   120   150   
