Updates for the cone size tests (added new cone sizes to the PF and PFchs jets) as well as the EDProducer based workflow.

--- a/config/jra_dr_finebinning.config
+++ b/config/jra_dr_finebinning.config
@@ -113,6 +113,18 @@ algs = 	ic5calo:0.210
 	ak8pfl1:0.400
 	ak9pfl1:0.450
 	ak10pfl1:0.500
+	ak3pfchs:0.150
+	ak4pfchs:0.200
+	ak6pfchs:0.300
+	ak8pfchs:0.400
+	ak9pfchs:0.450
+	ak10pfchs:0.500
+	ak3pfchsl1:0.150
+	ak4pfchsl1:0.200
+	ak6pfchsl1:0.300
+	ak8pfchsl1:0.400
+	ak9pfchsl1:0.450
+	ak10pfchsl1:0.500
 
 binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 	   20   23   27   30   35   40   45   57   72   90   120   150   
