Add new jet algorithms, sizes, and types.

--- a/config/jra_dr_finebinning.config
+++ b/config/jra_dr_finebinning.config
@@ -101,24 +101,32 @@ algs = 	ic5calo:0.210
 	ak5jptl1l2l3:0.205
 	ak7jptl1:0.205
 	ak7jptl1off:0.205
+	ak1pf:0.050
+	ak2pf:0.100
 	ak3pf:0.150
 	ak4pf:0.200
 	ak6pf:0.300
 	ak8pf:0.400
 	ak9pf:0.450
 	ak10pf:0.500
+	ak1pfl1:0.050
+	ak2pfl1:0.100
 	ak3pfl1:0.150
 	ak4pfl1:0.200
 	ak6pfl1:0.300
 	ak8pfl1:0.400
 	ak9pfl1:0.450
 	ak10pfl1:0.500
+	ak1pfchs:0.050
+	ak2pfchs:0.100
 	ak3pfchs:0.150
 	ak4pfchs:0.200
 	ak6pfchs:0.300
 	ak8pfchs:0.400
 	ak9pfchs:0.450
 	ak10pfchs:0.500
+	ak1pfchsl1:0.050
+	ak2pfchsl1:0.100
 	ak3pfchsl1:0.150
 	ak4pfchsl1:0.200
 	ak6pfchsl1:0.300
