--- a/config/jra_dr_finebinning_flavor.config
+++ b/config/jra_dr_finebinning_flavor.config
@@ -19,6 +19,7 @@ algs = 	ic5calo:0.210
 	ca5calo:0.220
 	ak5calol1:0.250
 	ak5calol1off:0.250
+	ak5calol1offl2l3:0.250
 	ic5calol2l3:0.210
 	ak5calol2l3:0.205
 	gk5calol2l3:0.210
@@ -27,8 +28,6 @@ algs = 	ic5calo:0.210
 	kt5calol2l3:0.240
 	ca4calol2l3:0.190
 	ca5calol2l3:0.220
-	ak5calol1l2l3:0.250
-	ak5calol1offl2l3:0.250
 	ak7calo:0.350
 	gk7calo:0.290
 	sc7calo:0.340
@@ -45,8 +44,8 @@ algs = 	ic5calo:0.210
 	kt7calol2l3:0.325
 	ca6calol2l3:0.250
 	ca7calol2l3:0.300
-	ak7calol1l2l3:0.350
-	ak7calol1offl2l3:0.350
+	ak5caloHLT:0.250
+	ak5caloHLTl1:0.250
 	ic5pf:0.105
 	ak5pf:0.250
 	gk5pf:0.110
@@ -56,6 +55,7 @@ algs = 	ic5calo:0.210
 	ca4pf:0.115
 	ca5pf:0.125
 	ak5pfl1:0.250
+	ak5pfl1l2l3:0.250
 	ak5pfl1off:0.250
 	ic5pfl2l3:0.105
 	ak5pfl2l3:0.110
@@ -65,8 +65,6 @@ algs = 	ic5calo:0.210
 	kt5pfl2l3:0.145
 	ca4pfl2l3:0.115
 	ca5pfl2l3:0.125
-	ak5pfl1l2l3:0.250
-	ak5pfl1offl2l3:0.250
 	ak7pf:0.350
 	gk7pf:0.150
 	sc7pf:0.180
@@ -83,29 +81,58 @@ algs = 	ic5calo:0.210
 	kt7pfl2l3:0.210
 	ca6pfl2l3:0.150
 	ca7pfl2l3:0.190
-	ak7pfl1l2l3:0.350
-	ak7pfl1offl2l3:0.350
 	ak5pfchs:0.250
 	ak5pfchsl1:0.250
-	ak5pfchsl1off:0.250
 	ak5pfchsl1l2l3:0.250
-	ak5pfchsl1offl2l3:0.250
+	ak5pfchsl1off:0.250
 	ak7pfchs:0.350
 	ak7pfchsl1:0.350
 	ak7pfchsl1off:0.350
-	ak7pfchsl1l2l3:0.350
-	ak7pfchsl1offl2l3:0.350
+	ak5pfHLT:0.250
+	ak5pfHLTl1:0.250
+	ak5pfchsHLT:0.250
+	ak5pfchsHLTl1:0.250
 	ic5jpt:0.210
 	sc5jpt:0.240
-	ak5jpt:0.250
-	ak7jpt:0.350
-	ak5jptl1:0.250
-	ak7jptl1:0.350
-	ak5jptl1l2l3:0.250
-	ak7jptl1l2l3:0.350
-	ak5jptl1offl2l3:0.250
-	ak7jptl1offl2l3:0.350
-
+	ak5jpt:0.205
+	ak7jpt:0.205
+	ak5jptl1:0.205
+	ak5jptl1off:0.205
+	ak5jptl1l2l3:0.205
+	ak7jptl1:0.205
+	ak7jptl1off:0.205
+	ak1pf:0.050
+	ak2pf:0.100
+	ak3pf:0.150
+	ak4pf:0.200
+	ak6pf:0.300
+	ak8pf:0.400
+	ak9pf:0.450
+	ak10pf:0.500
+	ak1pfl1:0.050
+	ak2pfl1:0.100
+	ak3pfl1:0.150
+	ak4pfl1:0.200
+	ak6pfl1:0.300
+	ak8pfl1:0.400
+	ak9pfl1:0.450
+	ak10pfl1:0.500
+	ak1pfchs:0.050
+	ak2pfchs:0.100
+	ak3pfchs:0.150
+	ak4pfchs:0.200
+	ak6pfchs:0.300
+	ak8pfchs:0.400
+	ak9pfchs:0.450
+	ak10pfchs:0.500
+	ak1pfchsl1:0.050
+	ak2pfchsl1:0.100
+	ak3pfchsl1:0.150
+	ak4pfchsl1:0.200
+	ak6pfchsl1:0.300
+	ak8pfchsl1:0.400
+	ak9pfchsl1:0.450
+	ak10pfchsl1:0.500
 
 binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 	   20   23   27   30   35   40   45   57   72   90   120   150   
