--- a/config/jra_dr_finebinning.config
+++ b/config/jra_dr_finebinning.config
@@ -134,10 +134,15 @@ algs = 	ic5calo:0.210
 	ak9pfchsl1:0.450
 	ak10pfchsl1:0.500
 
-binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
-	   20   23   27   30   35   40   45   57   72   90   120   150   
-	   200   300   400   550   750   1000   1500   2000   2500   3000 
-	   3500   4000   4500   5000   10000
+$binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
+$	   20   23   27   30   35   40   45   57   72   90   120   150   
+$	   200   300   400   550   750   1000   1500   2000   2500   3000 
+$	   3500   4000   4500   5000   10000
+
+binspt = 1  2   3   4   5   6   7   8   9   10   11   12   13   14   15   17
+       20   23   27   30   35   40   45   57   72   90   120   150
+       200   300   400   550   750   1000   1500   2000   2500   3000
+       3500   4000   4500   5000   10000
 
 binseta = -5.191 -4.889 -4.716 -4.538 -4.363 -4.191 -4.013 -3.839 -3.664 
 	 -3.489 -3.314 -3.139 -2.964 -2.853 -2.650 -2.500 -2.322 -2.172 
