--- a/JetAnalyzers/config/jra_dr_finebinning_flavor.config
+++ b/JetAnalyzers/config/jra_dr_finebinning_flavor.config
@@ -139,8 +139,8 @@ binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17
 	   200   300   400   550   750   1000   1500   2000   2500   3000 
 	   3500   4000   4500   5000   10000
 
-binseta = -5.0 -3.0 -1.3 +0.0 +1.3 +3.0 +5.0
-$binseta = -5.0 -4.7 -3.2 -3.0 -2.5 -1.3 +0.0 +1.3 +2.5 +3.0 +3.2 +4.7 +5.0
+$binseta = -5.0 -3.0 -1.3 +0.0 +1.3 +3.0 +5.0
+binseta = -5.0 -3.0 -2.5 -1.3 +0.0 +1.3 +2.5 +3.0 +5.0
 
 
 binsphi = -3.141 -2.700 -2.100 -1.500 -0.900 -0.300 
