Add some new algroithms and their deltaR.

--- a/JetAnalyzers/config/jra_dr_finebinning.config
+++ b/JetAnalyzers/config/jra_dr_finebinning.config
@@ -58,7 +58,7 @@ algs = 	ic5calo:0.210
 	ak5pfl1l2l3:0.250
 	ak5pfl1off:0.250
 	ic5pfl2l3:0.105
-	ak5pfl2l3:0.110
+	ak5pfl2l3:0.250
 	gk5pfl2l3:0.110
 	sc5pfl2l3:0.135
 	kt4pfl2l3:0.120
@@ -74,7 +74,7 @@ algs = 	ic5calo:0.210
 	ca7pf:0.190
 	ak7pfl1:0.350
 	ak7pfl1off:0.350
-	ak7pfl2l3:0.150
+	ak7pfl2l3:0.350
 	gk7pfl2l3:0.150
 	sc7pfl2l3:0.180
 	kt6pfl2l3:0.180
@@ -83,10 +83,12 @@ algs = 	ic5calo:0.210
 	ca7pfl2l3:0.190
 	ak5pfchs:0.250
 	ak5pfchsl1:0.250
+	ak5pfchsl2l3:0.250
 	ak5pfchsl1l2l3:0.250
 	ak5pfchsl1off:0.250
 	ak7pfchs:0.350
 	ak7pfchsl1:0.350
+	ak7pfchsl2l3:0.350
 	ak7pfchsl1off:0.350
 	ak5pfHLT:0.250
 	ak5pfHLTl1:0.250
@@ -117,6 +119,22 @@ algs = 	ic5calo:0.210
 	ak8pfl1:0.400
 	ak9pfl1:0.450
 	ak10pfl1:0.500
+	ak1pfl2l3:0.050
+	ak2pfl2l3:0.100
+	ak3pfl2l3:0.150
+	ak4pfl2l3:0.200
+	ak6pfl2l3:0.300
+	ak8pfl2l3:0.400
+	ak9pfl2l3:0.450
+	ak10pfl2l3:0.500
+	ak1pfl1l2l3:0.050
+	ak2pfl1l2l3:0.100
+	ak3pfl1l2l3:0.150
+	ak4pfl1l2l3:0.200
+	ak6pfl1l2l3:0.300
+	ak8pfl1l2l3:0.400
+	ak9pfl1l2l3:0.450
+	ak10pfl1l2l3:0.500
 	ak1pfchs:0.050
 	ak2pfchs:0.100
 	ak3pfchs:0.150
@@ -133,6 +151,62 @@ algs = 	ic5calo:0.210
 	ak8pfchsl1:0.400
 	ak9pfchsl1:0.450
 	ak10pfchsl1:0.500
+	ak1pfchsl2l3:0.050
+	ak2pfchsl2l3:0.100
+	ak3pfchsl2l3:0.150
+	ak4pfchsl2l3:0.200
+	ak6pfchsl2l3:0.300
+	ak8pfchsl2l3:0.400
+	ak9pfchsl2l3:0.450
+	ak10pfchsl2l3:0.500
+	ak1pfchsl1l2l3:0.050
+	ak2pfchsl1l2l3:0.100
+	ak3pfchsl1l2l3:0.150
+	ak4pfchsl1l2l3:0.200
+	ak6pfchsl1l2l3:0.300
+	ak8pfchsl1l2l3:0.400
+	ak9pfchsl1l2l3:0.450
+	ak10pfchsl1l2l3:0.500
+    ak1puppi:0.050
+    ak2puppi:0.100
+    ak3puppi:0.150
+    ak4puppi:0.200
+    ak5puppi:0.250
+    ak6puppi:0.300
+    ak7puppi:0.350
+    ak8puppi:0.400
+    ak9puppi:0.450
+    ak10puppi:0.500
+    ak1puppil1:0.050
+    ak2puppil1:0.100
+    ak3puppil1:0.150
+    ak4puppil1:0.200
+    ak5puppil1:0.250
+    ak6puppil1:0.300
+    ak7puppil1:0.350
+    ak8puppil1:0.400
+    ak9puppil1:0.450
+    ak10puppil1:0.500
+    ak1puppil2l3:0.050
+    ak2puppil2l3:0.100
+    ak3puppil2l3:0.150
+    ak4puppil2l3:0.200
+    ak5puppil2l3:0.250
+    ak6puppil2l3:0.300
+    ak7puppil2l3:0.350
+    ak8puppil2l3:0.400
+    ak9puppil2l3:0.450
+    ak10puppil2l3:0.500
+    ak1puppil1l2l3:0.050
+    ak2puppil1l2l3:0.100
+    ak3puppil1l2l3:0.150
+    ak4puppil1l2l3:0.200
+    ak5puppil1l2l3:0.250
+    ak6puppil1l2l3:0.300
+    ak7puppil1l2l3:0.350
+    ak8puppil1l2l3:0.400
+    ak9puppil1l2l3:0.450
+    ak10puppil1l2l3:0.500
 
 $binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 $	   20   23   27   30   35   40   45   57   72   90   120   150   
