--- a/JetAnalyzers/config/jra_dr_finebinning_flavor.config
+++ b/JetAnalyzers/config/jra_dr_finebinning_flavor.config
@@ -83,6 +83,7 @@ algs = 	ic5calo:0.210
 	ca7pfl2l3:0.190
 	ak5pfchs:0.250
 	ak5pfchsl1:0.250
+	ak5pfchsl2l3:0.250
 	ak5pfchsl1l2l3:0.250
 	ak5pfchsl1off:0.250
 	ak7pfchs:0.350
