Add more aliases to the configuration files and executables. Increate the integration with the executables and the JetInfo class.

--- a/JetAnalyzers/config/jra_dr_abscoarsebinningeta.config
+++ b/JetAnalyzers/config/jra_dr_abscoarsebinningeta.config
@@ -88,6 +88,7 @@ algs = 	ic5calo:0.210
 	ak5pfchsl1off:0.250
 	ak7pfchs:0.350
 	ak7pfchsl1:0.350
+	ak7pfchsl2l3:0.350
 	ak7pfchsl1off:0.350
 	ak5pfHLT:0.250
 	ak5pfHLTl1:0.250
@@ -118,6 +119,14 @@ algs = 	ic5calo:0.210
 	ak8pfl1:0.400
 	ak9pfl1:0.450
 	ak10pfl1:0.500
+	ak1pfl2l3:0.050
+	ak2pfl2l3:0.100
+	ak3pfl2l3:0.150
+	ak4pfl2l3:0.200
+	ak6pfl2l3:0.300
+	ak8pfl2l3:0.400
+	ak9pfl2l3:0.450
+	ak10pfl2l3:0.500
 	ak1pfchs:0.050
 	ak2pfchs:0.100
 	ak3pfchs:0.150
@@ -134,6 +143,45 @@ algs = 	ic5calo:0.210
 	ak8pfchsl1:0.400
 	ak9pfchsl1:0.450
 	ak10pfchsl1:0.500
+	ak1pfchsl2l3:0.050
+	ak2pfchsl2l3:0.100
+	ak3pfchsl2l3:0.150
+	ak4pfchsl2l3:0.200
+	ak6pfchsl2l3:0.300
+	ak8pfchsl2l3:0.400
+	ak9pfchsl2l3:0.450
+	ak10pfchsl2l3:0.500
+	ak1puppi:0.050
+	ak2puppi:0.100
+	ak3puppi:0.150
+	ak4puppi:0.200
+	ak5puppi:0.250
+	ak6puppi:0.300
+	ak7puppi:0.350
+	ak8puppi:0.400
+	ak9puppi:0.450
+	ak10puppi:0.500
+	ak1puppil1:0.050
+	ak2puppil1:0.100
+	ak3puppil1:0.150
+	ak4puppil1:0.200
+	ak5puppil1:0.250
+	ak6puppil1:0.300
+	ak7puppil1:0.350
+	ak8puppil1:0.400
+	ak9puppil1:0.450
+	ak10puppil1:0.500
+	ak1puppil2l3:0.050
+	ak2puppil2l3:0.100
+	ak3puppil2l3:0.150
+	ak4puppil2l3:0.200
+	ak5puppil2l3:0.250
+	ak6puppil2l3:0.300
+	ak7puppil2l3:0.350
+	ak8puppil2l3:0.400
+	ak9puppil2l3:0.450
+	ak10puppil2l3:0.500
+
 
 binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
 	   20   23   27   30   35   40   45   57   72   90   120   150   
