Add some calo algorithms

--- a/JetAnalyzers/config/jra_dr_abscoarsebinningeta.config
+++ b/JetAnalyzers/config/jra_dr_abscoarsebinningeta.config
@@ -10,6 +10,7 @@ $
 $ algorithms [format: algorithm:drmax]
 $
 algs = 	ic5calo:0.210
+	ak4calo:0.200
 	ak5calo:0.250
 	gk5calo:0.210
 	sc5calo:0.240
@@ -21,6 +22,7 @@ algs = 	ic5calo:0.210
 	ak5calol1off:0.250
 	ak5calol1offl2l3:0.250
 	ic5calol2l3:0.210
+	ak4calol2l3:0.200
 	ak5calol2l3:0.205
 	gk5calol2l3:0.210
 	sc5calol2l3:0.240
@@ -58,7 +60,7 @@ algs = 	ic5calo:0.210
 	ak5pfl1l2l3:0.250
 	ak5pfl1off:0.250
 	ic5pfl2l3:0.105
-	ak5pfl2l3:0.110
+	ak5pfl2l3:0.250
 	gk5pfl2l3:0.110
 	sc5pfl2l3:0.135
 	kt4pfl2l3:0.120
@@ -74,7 +76,7 @@ algs = 	ic5calo:0.210
 	ca7pf:0.190
 	ak7pfl1:0.350
 	ak7pfl1off:0.350
-	ak7pfl2l3:0.150
+	ak7pfl2l3:0.350
 	gk7pfl2l3:0.150
 	sc7pfl2l3:0.180
 	kt6pfl2l3:0.180
@@ -127,6 +129,14 @@ algs = 	ic5calo:0.210
 	ak8pfl2l3:0.400
 	ak9pfl2l3:0.450
 	ak10pfl2l3:0.500
+    ak1pfl1l2l3:0.050
+    ak2pfl1l2l3:0.100
+    ak3pfl1l2l3:0.150
+    ak4pfl1l2l3:0.200
+    ak6pfl1l2l3:0.300
+    ak8pfl1l2l3:0.400
+    ak9pfl1l2l3:0.450
+    ak10pfl1l2l3:0.500
 	ak1pfchs:0.050
 	ak2pfchs:0.100
 	ak3pfchs:0.150
@@ -151,6 +161,14 @@ algs = 	ic5calo:0.210
 	ak8pfchsl2l3:0.400
 	ak9pfchsl2l3:0.450
 	ak10pfchsl2l3:0.500
+    ak1pfchsl1l2l3:0.050
+    ak2pfchsl1l2l3:0.100
+    ak3pfchsl1l2l3:0.150
+    ak4pfchsl1l2l3:0.200
+    ak6pfchsl1l2l3:0.300
+    ak8pfchsl1l2l3:0.400
+    ak9pfchsl1l2l3:0.450
+    ak10pfchsl1l2l3:0.500
 	ak1puppi:0.050
 	ak2puppi:0.100
 	ak3puppi:0.150
@@ -181,17 +199,30 @@ algs = 	ic5calo:0.210
 	ak8puppil2l3:0.400
 	ak9puppil2l3:0.450
 	ak10puppil2l3:0.500
+	ak1puppil1l2l3:0.050
+    ak2puppil1l2l3:0.100
+    ak3puppil1l2l3:0.150
+    ak4puppil1l2l3:0.200
+    ak5puppil1l2l3:0.250
+    ak6puppil1l2l3:0.300
+    ak7puppil1l2l3:0.350
+    ak8puppil1l2l3:0.400
+    ak9puppil1l2l3:0.450
+    ak10puppil1l2l3:0.500
 
 
-binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
-	   20   23   27   30   35   40   45   57   72   90   120   150   
-	   200   300   400   550   750   1000   1500   2000   2500   3000 
-	   3500   4000   4500   5000   10000
+$binspt = 10   10.5   11   11.5   12   12.5   13   13.5   14   15   17   
+$	   20   23   27   30   35   40   45   57   72   90   120   150   
+$	   200   300   400   550   750   1000   1500   2000   2500   3000 
+$	   3500   4000   4500   5000   10000
 
-$binseta = -5.0 -3.0 -1.3 +0.0 +1.3 +3.0 +5.0
+binspt = 1  2   3   4   5   6   7   8   9   10   11   12   13   14   15   17
+       20   23   27   30   35   40   45   57   72   90   120   150
+       200   300   400   550   750   1000   1500   2000   2500   3000
+       3500   4000   4500   5000   10000
+
 $binseta = -5.0 -3.0 -2.5 -1.3 +0.0 +1.3 +2.5 +3.0 +5.0
 binseta = +0.0 +1.3 +2.5 +3.0 +5.0
-
 
 binsphi = -3.141 -2.700 -2.100 -1.500 -0.900 -0.300 
 	  +0.300 +0.900 +1.500 +2.100 +2.700 +3.141
