--- a/JetAnalyzers/config/jra_dr_finebinning.config
+++ b/JetAnalyzers/config/jra_dr_finebinning.config
@@ -10,6 +10,7 @@ $
 $ algorithms [format: algorithm:drmax]
 $
 algs = 	ic5calo:0.210
+	ak4calo:0.200
 	ak5calo:0.250
 	gk5calo:0.210
 	sc5calo:0.240
@@ -21,6 +22,7 @@ algs = 	ic5calo:0.210
 	ak5calol1off:0.250
 	ak5calol1offl2l3:0.250
 	ic5calol2l3:0.210
+	ak4calol2l3:0.200
 	ak5calol2l3:0.205
 	gk5calol2l3:0.210
 	sc5calol2l3:0.240
